# 3D_audio

./: .gitignore  CMakeLists.txt  README.md  ico.rc
dll/: README.md
form/: AudioImportDialog.ui  audiosourcepanel.ui  occlusionfilterpanel.ui  publicparameterpanel.ui  sourceparameterwidget.ui  stackpanel.ui  xwidget.ui
include/AUDIO/: FFmpegWorker.h  audiofileprocessor.h  audiorecorder.h  audiosource.h  auxeffectslot.h  listener.h  occlusionfilter.h  parametercalculationengine.h
include/CONTROL/: audiomanager.h  roommap.h  scenefilehandler.h
include/GUI/: AudioImportDialog.h  AudioProgressDialog.h  audiosourcepanel.h  draggableitem.h  draggablelistener.h  draggablesource.h  mapscene.h  occlusionfilterpanel.h  parameterwidget.h  publicparameterpanel.h  sourceparameterwidget.h  stackpanel.h  wallrectitem.h  waveformwidget.h  xwidget.h
resources/: 111.json  222.json  resources.qrc  sceneTest.json  sceneTest2.json  sceneTest3.json  test.flac  test.json  test1.json  wallTest.json  封闭空间.json
resources/qss/: contentwidget.qss  xwidget.qss
src/: main.cpp
src/AUDIO/: FFmpegWorker.cpp  audiofileprocessor.cpp  audiorecorder.cpp  audiosource.cpp  auxeffectslot.cpp  listener.cpp  occlusionfilter.cpp  parametercalculationengine.cpp
src/CONTROL/: audiomanager.cpp  roommap.cpp  scenefilehandler.cpp
src/GUI/: AudioImportDialog.cpp  AudioProgressDialog.cpp  audiosourcepanel.cpp  draggableitem.cpp  draggablelistener.cpp  draggablesource.cpp  mapscene.cpp  occlusionfilterpanel.cpp  parameterwidget.cpp  publicparameterpanel.cpp  sourceparameterwidget.cpp  stackpanel.cpp  wallrectitem.cpp  waveformwidget.cpp  xwidget.cpp
